syntax = "proto3";

package api;
option go_package = "controlplane/apiproto";

message AuthRequest {
    string password = 1;
    string user_name = 2;
}

message Empty {
}

message AuthResponse {
    repeated string groups = 1;
}

message DataSourceResponse {
    string data_source_name = 1;
}

message InspektorPolicy {
    bytes wasm_byte_code = 1;
}

service Inspektor {
    rpc Auth(AuthRequest) returns (AuthResponse) {}
    rpc Policy(Empty) returns (stream InspektorPolicy){}
    rpc GetDataSource(Empty) returns (DataSourceResponse) {}
}